skills and projects added

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -214,7 +214,7 @@ p{
 
 .what-i-do-icon{
     width: 47px;
-    height: 40px;
+    height: 47px;
     margin: 5px 5px 4px 11px;
     padding: 0px;
     display: flex;
@@ -260,10 +260,21 @@ p{
     text-align: center;
     background-color: #fff4f4;
     padding: 14px;
-    margin:37px 49px 37px 42px;
+    margin:37px 49px 37px 100px;
     width: 80%;
     border-radius: 31px;
 }
+
+@media only screen and (max-width: 600px) {
+    .BS,.FSC,.matric{
+        text-align: center;
+        background-color: #fff4f4;
+        padding: 14px;
+        margin:37px 49px 37px 25px;
+        width: 80%;
+        border-radius: 31px;
+    }
+  }
 
 /* ------------------------------------------------------------skills and knowledge ---------- -------------------------------*/
 .skils-knowledge{
